added GamepadControl.java and rewrited unworking actions